--- a/Zhakhalov/Javascript/JSMissile/index.html
+++ b/Zhakhalov/Javascript/JSMissile/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
+		<h2>Just click</h2>
 		<canvas id="myCanvas" width="1280" height="720" ></canvas>
+		<script src="engine.js" type="text/javascript"></script>
 		<script src="script.js" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script>Start();</script>
